// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Rendering should match to snapshot - Default 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Regular",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "400",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - Default Bold 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Bold",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "700",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - Default Medium 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Medium",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "500",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - Default Thin 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Thin",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "100",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - H1 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Regular",
      "fontSize": 20,
      "fontStyle": null,
      "fontWeight": "400",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - H2 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Regular",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "400",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - H3 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Regular",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "400",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - Italics 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-RegularItalic",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "400",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - Medium 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Regular",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "400",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - Small 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Regular",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "400",
      "textAlign": "left",
    }
  }
>
  Test
</Text>
`;

exports[`Text Rendering should match to snapshot - align right 1`] = `
<Text
  style={
    Object {
      "color": "#3E3F3F",
      "fontFamily": "Lato-Regular",
      "fontSize": 12,
      "fontStyle": null,
      "fontWeight": "400",
      "textAlign": "right",
    }
  }
>
  Test
</Text>
`;
